@@ -68,9 +68,12 @@ public:
 	virtual void process_end () = 0;
 
 	float current_frames_per_second () const;
+	bool skipping () const;
+	int last_frame () const;
 
 protected:
-	void frame_done ();
+	void frame_done (int n);
+	void frame_skipped ();
 	
 	/** FilmState of the film that we are encoding */
 	boost::shared_ptr<const FilmState> _fs;
@@ -79,9 +82,13 @@ protected:
 	/** Log */
 	Log* _log;
 
+	/** Mutex for _time_history, _just_skipped and _last_frame */
 	mutable boost::mutex _history_mutex;
 	std::list<struct timeval> _time_history;
 	static int const _history_size;
+	/** true if the last frame we processed was skipped (because it was already done) */
+	bool _just_skipped;
+	int _last_frame;
 };
 
 #endif
