@@ -1,5 +1,9 @@
 2012-09-22  Carl Hetherington  <cth@carlh.net>
 
+	* Improve transcode job progress reporting.
+
+2012-09-22  Carl Hetherington  <cth@carlh.net>
+
 	* Version 0.50 released.
 
 2012-09-22  Carl Hetherington  <cth@carlh.net>
